# humanoid_robot_intelligence_control_system_demos

./: .robotis_humanoid_robot_demo.rosinstall  .robotis_op3_demo.rosinstall  .travis.yml  README.md
.github/workflows/: cmake.yml  codeql.yml  docker-publish.yml
humanoid_robot_ball_detector/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_ball_detector/cfg/: DetectorParams.cfg  DetectorParamsBlue.cfg  DetectorParamsRed.cfg
humanoid_robot_ball_detector/include/humanoid_robot_ball_detector/: ball_detector.h  ball_detector_config.h
humanoid_robot_ball_detector/launch/: ball_detector.launch  ball_detector_from_usb_cam.launch  ball_detector_from_uvc.launch
humanoid_robot_ball_detector/src/: ball_detector.cpp  ball_detector_node.cpp
humanoid_robot_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_bringup/launch/: humanoid_robot_bringup.launch  humanoid_robot_bringup_visualization.launch
humanoid_robot_bringup/rviz/: humanoid_robot_bringup.rviz
humanoid_robot_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_demo/humanoid_robot_humanoid_robot_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_demo/include/humanoid_robot_demo/: action_demo.h  ball_follower.h  ball_tracker.h  button_test.h  face_tracker.h  mic_test.h  op_demo.h  soccer_demo.h  vision_demo.h
humanoid_robot_demo/launch/: demo.launch  self_test.launch
humanoid_robot_demo/list/: action_script.yaml  action_script_bk.yaml
humanoid_robot_demo/src/: demo_node.cpp  test_node.cpp
humanoid_robot_demo/src/action/: action_demo.cpp
humanoid_robot_demo/src/soccer/: ball_follower.cpp  ball_tracker.cpp  soccer_demo.cpp
humanoid_robot_demo/src/test/: button_test.cpp  mic_test.cpp
humanoid_robot_demo/src/vision/: face_tracker.cpp  vision_demo.cpp
humanoid_robot_intelligence_control_system_ball_detector/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_intelligence_control_system_ball_detector/cfg/: DetectorParams.cfg  DetectorParamsBlue.cfg  DetectorParamsRed.cfg
humanoid_robot_intelligence_control_system_ball_detector/include/humanoid_robot_intelligence_control_system_ball_detector/: ball_detector.h  ball_detector_config.h
humanoid_robot_intelligence_control_system_ball_detector/launch/: ball_detector.launch  ball_detector_from_usb_cam.launch  ball_detector_from_uvc.launch
humanoid_robot_intelligence_control_system_ball_detector/src/: ball_detector.cpp  ball_detector_node.cpp
humanoid_robot_intelligence_control_system_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_intelligence_control_system_bringup/launch/: humanoid_robot_bringup.launch  humanoid_robot_intelligence_control_system_bringup.launch.py  humanoid_robot_intelligence_control_system_bringup_visualization.launch  humanoid_robot_intelligence_control_system_bringup_visualization.launch.py
humanoid_robot_intelligence_control_system_bringup/launch/ros1/: humanoid_robot_intelligence_control_system_bringup_visualization.launch
humanoid_robot_intelligence_control_system_bringup/rviz/: humanoid_robot_bringup.rviz
humanoid_robot_intelligence_control_system_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_intelligence_control_system_demo/humanoid_robot_humanoid_robot_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_intelligence_control_system_demo/include/humanoid_robot_intelligence_control_system_demo/: action_demo.h  ball_follower.h  ball_tracker.h  button_test.h  face_tracker.h  mic_test.h  op_demo.h  soccer_demo.h  vision_demo.h
humanoid_robot_intelligence_control_system_demo/launch/: demo.launch  face_detection.launch  face_detection_humanoid_robot.launch  self_test.launch
humanoid_robot_intelligence_control_system_demo/list/: action_script.yaml  action_script_bk.yaml
humanoid_robot_intelligence_control_system_demo/src/: demo_node.cpp  test_node.cpp
humanoid_robot_intelligence_control_system_demo/src/action/: action_demo.cpp
humanoid_robot_intelligence_control_system_demo/src/soccer/: ball_follower.cpp  ball_tracker.cpp  soccer_demo.cpp
humanoid_robot_intelligence_control_system_read_write_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
humanoid_robot_intelligence_control_system_read_write_demo/launch/: humanoid_robot_intelligence_control_system_read_write.launch.py  humanoid_robot_read_write.launch
humanoid_robot_intelligence_control_system_read_write_demo/launch/ros1/: humanoid_robot_intelligence_control_system_read_write.launch
humanoid_robot_intelligence_control_system_read_write_demo/src/: read_write.cpp  read_write.py
humanoid_robot_read_write_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
humanoid_robot_read_write_demo/launch/: humanoid_robot_read_write.launch
humanoid_robot_read_write_demo/src/: read_write.cpp
op3_ball_detector/: CHANGELOG.rst  CMakeLists.txt  package.xml
op3_ball_detector/launch/: ball_detector.launch  ball_detector_from_uvc.launch
op3_ball_detector/src/: ball_detector.cpp  ball_detector_node.cpp
op3_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
op3_bringup/launch/: op3_bringup.launch  op3_bringup_visualization.launch
op3_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
op3_demo/include/op3_demo/: action_demo.h  ball_follower.h  ball_tracker.h  button_test.h  mic_test.h  op_demo.h  soccer_demo.h  vision_demo.h
op3_demo/launch/: demo.launch  face_detection_op3.launch  self_test.launch
op3_demo/list/: action_script.yaml  action_script_bk.yaml
op3_demo/src/: demo_node.cpp  test_node.cpp
op3_demo/src/action/: action_demo.cpp
op3_demo/src/soccer/: ball_follower.cpp  ball_tracker.cpp  soccer_demo.cpp
op3_demo/src/test/: button_test.cpp  mic_test.cpp
op3_demo/src/vision/: face_tracker.cpp  vision_demo.cpp
op3_read_write_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
op3_read_write_demo/launch/: op3_read_write.launch
op3_read_write_demo/src/: read_write.cpp
robotis_humanoid_robot_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotis_op3_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+6 files in other folders)
