<?xml version="1.0"?>
<package format="2">
  <name>op3_bringup</name>
  <version>0.3.0</version>
  <description>
    This package is a demo for first time users.
    There is an example in the demo where you can run and visualize the robot.
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <url type="website">http://wiki.ros.org/op3_bringup</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Demo</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Demo/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>op3_manager</build_depend>
  <build_depend>op3_description</build_depend>
  <build_depend>usb_cam</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>

  <build_export_depend>op3_manager</build_export_depend>
  <build_export_depend>op3_description</build_export_depend>
  <build_export_depend>usb_cam</build_export_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rviz</build_export_depend>

  <exec_depend>op3_manager</exec_depend>
  <exec_depend>op3_description</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>

</package>
