<?xml version="1.0"?>
<package format="2">
  <name>robotis_humanoid_robot_demo</name>
  <version>0.3.0</version>
  <description>
    ROS packages for the robotis_humanoid_robot_demo (meta package)
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <url type="website">http://wiki.ros.org/robotis_humanoid_robot_demo</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/humanoid_robot/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-HUMANOID_ROBOT-Demo</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-HUMANOID_ROBOT-Demo/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>humanoid_robot_ball_detector</build_depend>
  <build_depend>humanoid_robot_bringup</build_depend>
  <build_depend>humanoid_robot_demo</build_depend>

  <build_export_depend>humanoid_robot_ball_detector</build_export_depend>
  <build_export_depend>humanoid_robot_bringup</build_export_depend>
  <build_export_depend>humanoid_robot_demo</build_export_depend>

  <exec_depend>humanoid_robot_ball_detector</exec_depend>
  <exec_depend>humanoid_robot_bringup</exec_depend>
  <exec_depend>humanoid_robot_demo</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
