<?xml version="1.0"?>
<package format="2">
  <name>humanoid_robot_demo</name>
  <version>0.3.0</version>
  <description>
    ROS packages for the humanoid_robot_demo (meta package)
  </description>
  <license>Apache 2.0</license>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>humanoid_robot_ball_detector</build_depend>
  <build_depend>humanoid_robot_bringup</build_depend>
  <build_depend>humanoid_robot_demo</build_depend>

  <build_export_depend>humanoid_robot_ball_detector</build_export_depend>
  <build_export_depend>humanoid_robot_bringup</build_export_depend>
  <build_export_depend>humanoid_robot_demo</build_export_depend>

  <exec_depend>humanoid_robot_ball_detector</exec_depend>
  <exec_depend>humanoid_robot_bringup</exec_depend>
  <exec_depend>humanoid_robot_demo</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
